--- a/about.html
+++ b/about.html
@@ -3,13 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PixelSmith | Landscape Gallery</title>
+  <title>About Me | PixelSmith</title>
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Fancybox CSS and JS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css" />
-  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
-
 </head>
 <body>
 
@@ -20,13 +15,9 @@
 
   <header class="animated-header">
     <div class="header-top">
-      <div class="logo-group">
-        <img src="logo.png" alt="PixelSmith Logo" class="logo" />
-        <h1 class="site-title">PixelSmith</h1>
-      </div>
-    
+      <h1 class="site-title">PixelSmith</h1>
     </div>
-    <p class="subtitle">Scenic views and natural beauty</p>
+    <p class="subtitle">About Me</p>
   </header>
 
   <nav class="sticky-nav">
@@ -36,32 +27,23 @@
     <a href="portrait.html">Portrait</a>
     <a href="nature.html">Nature</a>
     <a href="event.html">Event</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
   </nav>
 
-  <section class="gallery-section">
-    <h2>Landscape Photography</h2>
-    <div class="gallery">
-      <a data-fancybox="gallery" href="https://via.placeholder.com/600x400?text=Landscape+1"><img src="https://via.placeholder.com/600x400?text=Landscape+1" alt="Landscape 1"></a>
-      <a data-fancybox="gallery" href="https://via.placeholder.com/600x400?text=Landscape+2"><img src="https://via.placeholder.com/600x400?text=Landscape+2" alt="Landscape 2"></a>
-      <a data-fancybox="gallery" href="https://via.placeholder.com/600x400?text=Landscape+3"><img src="https://via.placeholder.com/600x400?text=Landscape+3" alt="Landscape 3"></a>
+  <section class="about-section">
+    <div class="about-text">
+      <h2>Hi, I'm Kundan</h2>
+      <p>I’m a visual storyteller capturing fleeting moments and turning them into timeless frames. Every photo is a window into emotion, light, and soul. With PixelSmith, I strive to bring art and emotion together into a single frame that lasts forever.</p>
+    </div>
+    <div class="about-photo">
+      <img src="profile.png" alt="Kundan Portrait">
     </div>
   </section>
 
-  
-
-  <div class="social">
-    <h3>Follow Me</h3>
-    <a href="https://instagram.com/wilderador" target="_blank">Instagram</a>
-    <a href="https://youtube.com/theuncapturedyt" target="_blank">YouTube</a>
-  </div>
   <footer>
     <p>&copy; 2025 PixelSmith. Crafted with passion.</p>
   </footer>
-  <script>
-    document.getElementById('themeToggle').addEventListener('change', () => {
-      document.body.classList.toggle('dark');
-    });
-  </script>
 
 <!-- Floating Dark Mode Toggle -->
 <div class="fab-toggle" id="themeFabToggle" title="Toggle Theme">
