--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 <body>
 
 
+
+
+
+
+
+
 <section class="full-hero">
   <div class="hero-nav">
     <nav>
@@ -23,60 +29,65 @@
       <a href="portrait.html">Portrait</a>
       <a href="nature.html">Nature</a>
       <a href="event.html">Event</a>
-    </nav>
+      <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
   </div>
   <div class="hero-center">
     <h1 class="hero-brand">PixelSmith</h1>
     <p class="hero-tagline">Visual Stories | Real Emotions</p>
-    <a href="#contact" class="hero-button">Book a Session</a>
-    <p class="hero-intro">Hi, I'm Kundan — a visual storyteller capturing fleeting moments and turning them into timeless frames. Every photo is a window into emotion, light, and soul.</p>
+    <a href="contact.html" class="hero-button">Book a Session</a>
+    
+  
+  <div class="hero-about-mini">
+    <p class="hero-about-text">Hi, I'm Kundan — a visual storyteller capturing fleeting moments and turning them into timeless frames. Every photo is a window into emotion, light, and soul.</p>
+    <img src="profile.png" alt="Kundan" class="hero-about-pic" />
   </div>
+
+</div>
 </section>
 
 
-
-
-
-
-
-
-
-
-  
-
-  <section id="about" class="about-section">
-    <div class="about-text">
-      <h2>About Me</h2>
-      <p>
-        Hi, I'm Abhishek — a 27-year-old visual storyteller behind PixelSmith. Photography for me is not just clicking pictures, it's about capturing emotion, energy, and essence. Whether it's the subtle smile of a candid shot or the dramatic tones of a landscape, I craft visuals that speak louder than words. Every frame is a story — and I’d love to tell yours.
-      </p>
-    </div>
-    <div class="about-photo">
-      <img src="profile.png" alt="Kundan" />
-    </div>
-  </section>
-
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <form action="https://formspree.io/f/mpwdzrdg" method="POST" class="contact-form">
-      <label for="email">Your Email:</label>
-      <input type="email" name="email" id="email" placeholder="Your Email" required />
-      <label for="message">Your Message:</label>
-      <textarea name="message" id="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
-
-  <div class="social">
-    <h3>Follow Me</h3>
-    <a href="https://instagram.com/wilderador" target="_blank">Instagram</a>
-    <a href="https://youtube.com/theuncapturedyt" target="_blank">YouTube</a>
-  </div>
   <footer>
     <p>&copy; 2025 PixelSmith. Crafted with passion.</p>
   </footer>
   
   <script src="javascript.js"></script>
   
+
+<!-- Floating Dark Mode Toggle -->
+<div class="fab-toggle" id="themeFabToggle" title="Toggle Theme">
+  <span class="fab-icon">🌙</span>
+</div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const fab = document.getElementById("themeFabToggle");
+    const icon = fab.querySelector(".fab-icon");
+    const body = document.body;
+
+    function updateThemeIcon() {
+      if (body.classList.contains("dark")) {
+        icon.textContent = "☀️";
+      } else {
+        icon.textContent = "🌙";
+      }
+    }
+
+    // Set initial state from localStorage
+    if (localStorage.getItem("theme") === "dark") {
+      body.classList.add("dark");
+    }
+
+    updateThemeIcon();
+
+    fab.addEventListener("click", () => {
+      body.classList.toggle("dark");
+      localStorage.setItem("theme", body.classList.contains("dark") ? "dark" : "light");
+      updateThemeIcon();
+    });
+  });
+</script>
+
 </body>
 </html>
