--- a/nature.html
+++ b/nature.html
@@ -14,6 +14,12 @@
 
 </head>
 <body>
+
+
+
+
+
+
   <header class="animated-header">
     <div class="header-top">
       <div class="logo-group">
@@ -64,16 +70,7 @@
     </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <form action="https://formspree.io/f/mpwdzrdg" method="POST" class="contact-form">
-      <label for="email">Your Email:</label>
-      <input type="email" name="email" id="email" placeholder="Your Email" required />
-      <label for="message">Your Message:</label>
-      <textarea name="message" id="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
+  
 
   <div class="social">
     <h3>Follow Me</h3>
@@ -88,5 +85,40 @@
       document.body.classList.toggle('dark');
     });
   </script>
+
+<!-- Floating Dark Mode Toggle -->
+<div class="fab-toggle" id="themeFabToggle" title="Toggle Theme">
+  <span class="fab-icon">🌙</span>
+</div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const fab = document.getElementById("themeFabToggle");
+    const icon = fab.querySelector(".fab-icon");
+    const body = document.body;
+
+    function updateThemeIcon() {
+      if (body.classList.contains("dark")) {
+        icon.textContent = "☀️";
+      } else {
+        icon.textContent = "🌙";
+      }
+    }
+
+    // Set initial state from localStorage
+    if (localStorage.getItem("theme") === "dark") {
+      body.classList.add("dark");
+    }
+
+    updateThemeIcon();
+
+    fab.addEventListener("click", () => {
+      body.classList.toggle("dark");
+      localStorage.setItem("theme", body.classList.contains("dark") ? "dark" : "light");
+      updateThemeIcon();
+    });
+  });
+</script>
+
 </body>
 </html>
